fixed issue with resizing tile and inner points go behind svg

--- a/src/plugins/numberline/numberline-toolbar.scss
+++ b/src/plugins/numberline/numberline-toolbar.scss
@@ -7,6 +7,7 @@
   border: $toolbar-border;
   border-radius: 0 0 $toolbar-border-radius $toolbar-border-radius;
   overflow: hidden;
+  display: flex;
   z-index: $toolbar-z-index;
 
    &.disabled {
